# lila

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  install.rs  install_windows.rs
.github/workflows/: dependency_update.yml
example/: math_operations.md
example/nested_folder/: README.md  hello_world.py  latex.md
example/nested_folder/private/: decision_tree.md
migrations/2024-07-29-171716_create_html_metadata/: down.sql  up.sql
src/: main.rs  schema.rs  utils.rs
src/commands/: auto.rs  bookbinding.rs  chat.rs  convert.rs  edit.rs  extract.rs  init.rs  mod.rs  models.rs  prepare.rs  recommend.rs  remove.rs  render.rs  save.rs  tangle.rs  translate.rs  weave.rs
src/css/: style.css
src/server/: chat.rs  mod.rs  start.rs
src/utils/: env.rs  mod.rs  utils.rs
src/utils/database/: db.rs  models.rs
