[package]
name = "lila"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "~1.0"
clap = { version = "~4.5", features = ["derive"] }
colored = "3.0.0"
csv = "~1.3"
diesel = { version = "~2.2", features = ["sqlite"] }
dirs = "~6.0"
dotenvy = "~0.15"
hf-hub = "~0.4"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
pulldown-cmark = "~0.12"
regex = "~1.11"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.9"
sysinfo = "0.33.1"
tempfile = "~3.15"
tokio = "1.43.0"
tracing = "~0.1"
walkdir = "~2.5"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "~0.31", features = ["mps"] }
