[package]
name = "lila"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "~1.0"
clap = { version = "~4.5", features = ["derive"] }
colored = "~3.0"
csv = "~1.3"
diesel = { version = "~2.2", features = ["sqlite"] }
diesel_migrations = "~2.2"
dirs = "~6.0"
dotenvy = "~0.15"
hf-hub = "~0.4"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", tag = "v0.4.0"}
comrak = "~0.16"
regex = "~1.11"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_yaml = "~0.9"
sysinfo = "~0.33"
tempfile = "~3.15"
tokio = { version = "~1.43", features = ["rt-multi-thread", "macros"] }
tracing = "~0.1"
walkdir = "~2.5"
syntect = "~5.2"
once_cell = "~1.20"
actix-web = "~4.9"
actix-cors = "~0.7"
futures = "0.3.31"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "~0.31", features = ["mps"] }
